para ver la imagen de inicio

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,13 @@
 
 {% block content %}
     <div class="image-container">
-        <img src="{{ url_for('static', filename='images/Apacilagua.png') }}" alt="Imagen de la finca" />
+        <img src="{{ url_for('static', filename='images/apacilagua.png') }}" alt="Imagen de la finca" />
         <div class="overlay-text">
             <h1>Finca Apacilagua</h1>
             <p>Temporada 24-25.</p>
         </div>
     </div>
 {% endblock %}
+
+
 
