--- a/templates/estimaciones.html
+++ b/templates/estimaciones.html
@@ -33,11 +33,14 @@
         <label for="floresm">Flores Masculinas:</label>
         <input type="number" id="floresm" name="floresm" step="1"><br><br>
 
-        <label for="tensiometroa">Tensiometro 12:</label>
-        <input type="number" id="tensiometroa" name="tensiometroa" step="any"><br><br>
+        <label for="curva_crecimiento">Crecimiento cms:</label>
+        <input type="number" id="curva_crecimiento" name="curva_crecimiento" step="any"><br><br>
 
-        <label for="tensiometrob">Tensiometro 24:</label>
-        <input type="number" id="tensiometrob" name="tensiometrob" step="any"><br><br>
+        <label for="planta_pegada">Plantas Pegadas:</label>
+        <input type="number" id="planta_pegada" name="planta_pegada" step="any"><br><br>
+
+        <label for="total_plantas">Total de Plantas:</label>
+        <input type="number" id="total_plantas" name="total_plantas" step="any"><br><br>
 
         <label for="observaciones">Observaciones:</label><br>
         <textarea id="observaciones" name="observaciones" rows="4" cols="50"></textarea><br><br>
